src/test/ui/feature-gates/feature-gate-self_in_typedefs.stderr
error[E0411]: cannot find type `Self` in this scope
  --> $DIR/feature-gate-self_in_typedefs.rs:13:17
   |
LL |     Cons(T, &'a Self)
   |                 ^^^^ `Self` is only available in traits and impls
   |
   = help: add #![feature(self_in_typedefs)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0411`.
